--- a/services.html
+++ b/services.html
@@ -140,7 +140,9 @@
 
  
 
+      <!--  
       <div class="project-card">
+
         <h3>Derivative Advisory </h3>
         <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group or via link .</p>
         <h4 class="price-title">Pricing Details</h4>
@@ -148,14 +150,16 @@
         <p class="price">₹1000 One Time Pay</p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
-
+        
+      -->
 
       <div class="project-card">
-        <h3>Stock Advisory  </h3>
+        <h3>Stock and Derivative Advisory</h3>
+        <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group or via link .</p>
         <p> Stock Long term holding Equity Return rewards . We are expert in Equity research and return will be good for long term holdings . </p>
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price">₹1000 Per Month</p> -->
-        <p class="price">₹1000 One Time Pay </p>
+        <p class="price">₹1000 </p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>
 
@@ -177,6 +181,7 @@
   </script>
 </body>
 </html>
+
 
 
 
