--- a/services.html
+++ b/services.html
@@ -128,6 +128,20 @@
 
 
       <div class="project-card">
+        <h3>Stock Case </h3>
+        <!-- <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group or via link .</p> -->
+        <p>Portfolio Based Stock Cases . Regular Investments Cases . Premium Case . </p>
+        <p> Return will be good for long term holdings . Get Buy Date and Sell Date with profit return .  </p>
+        <h4 class="price-title">Pricing Details</h4>
+        <!-- <p class="price">₹1000 Per Month</p> -->
+        <p class="price">₹300 per case </p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
+      </div><br><br>          
+
+
+
+
+      <div class="project-card">
         <h3>Stock and Derivative Advisory</h3>
         <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group or via link .</p>
         <p> Stock Long term holding Equity Return rewards . We are expert in Equity research and return will be good for long term holdings . </p>
@@ -196,6 +210,7 @@
   </script>
 </body>
 </html>
+
 
 
 
