--- a/services.html
+++ b/services.html
@@ -133,7 +133,7 @@
         <p> Return will be good for long term holdings . Get Buy Date and Sell Date with profit return .  </p>
         <h4 class="price-title">Pricing Details</h4>
         <p class="price">₹300 per case </p>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSe7YP7--INR_bK65BbxWJ7Q6LQfwztqsHR4W23PtvfXaqxNFw/viewform?usp=dialog" class="demo-btn">Buy Now</a>                     
       </div><br><br>          
 
 
@@ -208,6 +208,7 @@
   </script>
 </body>
 </html>
+
 
 
 
