--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <!-- Index Section -->
   <section>
     <!-- <h2>Market Index Overview</h2> -->
-    <h2>Our Tool Cover All Index including commodities CALL PUT prices </h2>
+    <h2>Our Software Cover All Index including commodities CALL PUT prices </h2>
     <div class="projects">
       <div class="project-card">
         <h3>NIFTY 50</h3>
@@ -196,5 +196,6 @@
   </script>
 </body>
 </html>
+
 
 
