--- a/products.html
+++ b/products.html
@@ -142,7 +142,7 @@
 
   <section>
   <!--  <h2>Our Trading Tools</h2> -->
-      <h2>Our Trading Tools </h2>
+      <h2>Our Trading Software </h2>
 
     <div class="projects">
 
@@ -263,6 +263,7 @@
   </script>
 </body>
 </html>
+
 
 
 
