--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <!-- Home Content -->
   <section>
     <h2>Welcome to Option Trading Solutions</h2>
-    <p>We provide advanced prediction tools to help traders make better decisions in the derivative and equity markets. Indices Nifty, Sensex</p>
+    <p>We provide advanced prediction Software to help traders make better decisions in the derivative and equity markets. Indices Nifty, Sensex</p>
   </section>
 
   <!-- Index Section -->
@@ -196,6 +196,7 @@
   </script>
 </body>
 </html>
+
 
 
 
