--- a/services.html
+++ b/services.html
@@ -171,6 +171,15 @@
         <p>Android App </p>
         <a href="https://karthik2342323.github.io/PredictionViewOptionTrading/Prediction%20View.apk" class="demo-btn">Download Now </a>                     
       </div><br><br>            
+
+
+
+      <div class="project-card">
+        <h3>Prediction View Youtube Channel </h3>
+        <!-- <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p> -->
+        <p>Reports  </p>
+        <a href="https://www.youtube.com/@kartikmakwana6328" class="demo-btn">View</a>                     
+      </div><br><br>                    
         
 
  
@@ -208,6 +217,7 @@
   </script>
 </body>
 </html>
+
 
 
 
