--- a/products.html
+++ b/products.html
@@ -149,8 +149,8 @@
 
 
       <div class="project-card">
-        <h3>Derivative Prediction Software - Trial </h3>
-        <p>Nifty Sensex prediction tool CALL PUT Prediction .Range cover CALL PUT 20 - 40   . ML Trained Model </p>
+        <h3>Derivative Software - Trial </h3>
+        <p>Nifty Sensex prediction software CALL PUT Prediction .Range cover CALL PUT 20 - 40   . </p>
         <!--
         <h4 class="price-title">Pricing Details</h4>
         <p class="price-sub">1 Month License</p>
@@ -182,8 +182,8 @@
     <div class="projects">
 
       <div class="project-card">
-        <h3>Derivative Prediction Software - Basic</h3>
-        <p>Nifty Sensex prediction tool CALL PUT Prediction .Range cover CALL PUT 20 - 200   . ML Trained Model </p>
+        <h3>Derivative Software - Basic</h3>
+        <p>Nifty Sensex prediction software CALL PUT Prediction .Range cover CALL PUT 20 - 200   . ML Trained Model </p>
         <!--
         <h4 class="price-title">Pricing Details</h4>
         <p class="price-sub">1 Month License</p>
@@ -207,7 +207,7 @@
     <div class="projects">
 
       <div class="project-card">
-        <h3>Derivative Prediction Software - Premium</h3  >
+        <h3>Derivative Software - Premium</h3  >
         <p>Advanced prediction Nifty, Sensex , Crude Oil , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 200 , Full License  , ML Trained Model . </p>
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price-sub">1 Year License</p> -->
@@ -229,7 +229,7 @@
     <div class="projects">
 
       <div class="project-card">
-        <h3>Derivative Prediction Software version commodities</h3>
+        <h3>Derivative Software version commodities</h3>
         <p>Advanced prediction Nifty , Sensex , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 5000 , Full License  , ML Trained Model . </p>
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price-sub">1 Year License</p> -->
@@ -263,6 +263,7 @@
   </script>
 </body>
 </html>
+
 
 
 
