--- a/products.html
+++ b/products.html
@@ -201,6 +201,32 @@
 
 
 
+
+  <section>
+  <!--  <h2>Our Trading Tools</h2> -->
+
+    <div class="projects">
+
+      <div class="project-card">
+        <h3>Derivative Software - Premium</h3  >
+        <p>Advanced prediction Nifty, Sensex , Crude Oil , index , commodities  prediction tool CALL PUT  .Range cover CALL PUT 20 - 200 , Full License  , ML Trained Model . </p>
+        <h4 class="price-title">Pricing Details</h4>
+        <!-- <p class="price-sub">1 Year License</p> -->
+        <p class="price-sub">5 Year License</p>
+        <p class="price">₹25</p> 
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd2sqYrQHj9bKkGeSl3tBD9D-b4fKcBMPcDRstMJhu1ZBHlcA/viewform?usp=sharing&ouid=112921791997481527611" class="demo-btn">Buy Now</a>  
+       
+      </div>
+
+
+
+    </div>
+  </section>
+  
+
+  
+
+
   <section>
   <!--  <h2>Our Trading Tools</h2> -->
 
@@ -263,6 +289,7 @@
   </script>
 </body>
 </html>
+
 
 
 
