--- a/services.html
+++ b/services.html
@@ -161,6 +161,15 @@
         <a href="https://t.me/predictionview" class="demo-btn">Join Now</a>                     
       </div><br><br>    
 
+      <div class="project-card">
+        <h3>Investment Demo </h3>
+        <!-- <p>Trading calls , Nifty , Sensex , Bank Nifty . This Trading calls everyday will be send to you one day before market opens on group .</p> -->
+        <p> Regular Investment </p>
+        <p> Premium Investment </p>
+        
+        <a href="https://t.me/predictionview" class="demo-btn">Join Now</a>                     
+      </div><br><br>            
+
 
 
 
@@ -217,6 +226,7 @@
   </script>
 </body>
 </html>
+
 
 
 
