--- a/services.html
+++ b/services.html
@@ -124,15 +124,25 @@
 
       --> 
 
-
-
-
+      <!--
       <div class="project-card">
         <h3>Stock Case </h3>
         <p>Portfolio Based Stock Cases . Regular Investments Cases . Premium Case . </p>
         <p> Return will be good for long term holdings . Get Buy Date and Sell Date with profit return .  </p>
         <h4 class="price-title">Pricing Details</h4>
         <p class="price">₹300 per case </p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSe7YP7--INR_bK65BbxWJ7Q6LQfwztqsHR4W23PtvfXaqxNFw/viewform?usp=dialog" class="demo-btn">Buy Now</a>                     
+      </div><br><br>  
+      -->  
+
+
+      <div class="project-card">
+        <h3>Stock Case </h3>
+        <p>Portfolio Based Stock Cases . Regular Investments Cases .  </p>
+        <p> Return will be good for long term holdings . Get Buy Date and Sell Date with profit return .  </p>
+        <p> Get Nifty Software Call Put 20 , 200 for 1 year   </p>
+        <h4 class="price-title">Pricing Details</h4>
+        <p class="price">₹10 per case </p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSe7YP7--INR_bK65BbxWJ7Q6LQfwztqsHR4W23PtvfXaqxNFw/viewform?usp=dialog" class="demo-btn">Buy Now</a>                     
       </div><br><br>          
 
@@ -207,6 +217,7 @@
   </script>
 </body>
 </html>
+
 
 
 
