--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <title>Option Trading Solutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
    <!-- Favicon -->
-<!--<link rel="icon" type="image/jpeg" href="morgan_stanley_logo.jpg">-->
+  <link rel="icon" type="image/jpeg" href="morgan_stanley_logo.jpg">
+  <link rel="stylesheet" href="style.css">
+  
+
 
   <style>
 .projects {
@@ -196,6 +198,7 @@
   </script>
 </body>
 </html>
+
 
 
 
