--- a/services.html
+++ b/services.html
@@ -137,6 +137,20 @@
 
 
       <div class="project-card">
+        <h3>Our Brokers  </h3>
+        
+        <p> Return will be good for long term holdings . Get Buy Date and Sell Date with profit return .  </p>
+        <p>  Open Demat Account   </p>
+        <p>  Buy First Stock   </p>
+        <!--
+        <h4 class="price-title">Pricing Details</h4>
+        <p class="price">₹10 per case </p>
+        --> 
+        
+        <a href="https://app.groww.in/v3cO/jdwbgpb4" class="demo-btn">Open Demat Account </a>                     
+      </div><br><br>              
+
+      <div class="project-card">
         <h3>Stock Case </h3>
         <p>Portfolio Based Stock Cases . Regular Investments Cases .  </p>
         <p> Return will be good for long term holdings . Get Buy Date and Sell Date with profit return .  </p>
@@ -217,6 +231,7 @@
   </script>
 </body>
 </html>
+
 
 
 
