--- a/services.html
+++ b/services.html
@@ -139,7 +139,7 @@
       <div class="project-card">
         <h3>Our Brokers  </h3>
         
-        <p> Return will be good for long term holdings . Get Buy Date and Sell Date with profit return .  </p>
+        <!-- <p> Return will be good for long term holdings . Get Buy Date and Sell Date with profit return .  </p> -->
         <p>  Open Demat Account   </p>
         <p>  Buy First Stock   </p>
         <!--
@@ -231,6 +231,7 @@
   </script>
 </body>
 </html>
+
 
 
 
