--- a/services.html
+++ b/services.html
@@ -152,7 +152,7 @@
       <div class="project-card">
         <h3>Stock Case </h3>
         <p>Portfolio Based Stock Cases . Regular Investments Cases .  </p>
-        <p> Return will be good for long term holdings . Get Buy Date and Sell Date with profit return .  </p>
+        <p>  Get Buy Date and Sell Date with profit return .  </p>
         <p> Get Nifty Software Call Put 20 , 200 for 1 year   </p>
         <h4 class="price-title">Pricing Details</h4>
         <p class="price">₹10 per case </p>
@@ -230,6 +230,7 @@
   </script>
 </body>
 </html>
+
 
 
 
