--- a/products.html
+++ b/products.html
@@ -156,7 +156,7 @@
         <p class="price-sub">1 Month License</p>
         <p class="price">₹100</p> 
         -->    
-        <a href="https://karthik2342323.github.io/PredictionViewOptionTradingToolsTrialIndexPrivate/" class="demo-btn">View</a>     
+        <a href="https://karthik2342323.github.io/PredictionViewOptionTradingToolsTrialIndexPrivate/" class="demo-btn">View Demo</a>     
         
 
       </div>       
@@ -314,6 +314,7 @@
   </script>
 </body>
 </html>
+
 
 
 
