--- a/services.html
+++ b/services.html
@@ -155,7 +155,7 @@
         <p>  Get Buy Date and Sell Date with profit return .  </p>
         <p> Get Nifty Software Call Put 20 , 200 for 1 year   </p>
         <h4 class="price-title">Pricing Details</h4>
-        <p class="price">₹10 per case </p>
+        <p class="price">₹30,000 per case </p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSe7YP7--INR_bK65BbxWJ7Q6LQfwztqsHR4W23PtvfXaqxNFw/viewform?usp=dialog" class="demo-btn">Buy Now</a>                     
       </div><br><br>          
 
@@ -168,7 +168,7 @@
         <p> Stock Long term holding Equity Return rewards . We are expert in Equity research and return will be good for long term holdings . </p>
         <h4 class="price-title">Pricing Details</h4>
         <!-- <p class="price">₹1000 Per Month</p> -->
-        <p class="price">₹1000 </p>
+        <p class="price">₹30,000 One Time </p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeOWSz63quatq0Vg6mBkhGB4gMI2aqQMkzhVTXB9J0sji0nA/viewform?usp=header" class="demo-btn">Buy Now</a>                     
       </div><br><br>        
         
@@ -230,6 +230,7 @@
   </script>
 </body>
 </html>
+
 
 
 
