--- a/products.html
+++ b/products.html
@@ -183,7 +183,7 @@
 
       <div class="project-card">
         <h3>Derivative Software - Basic</h3>
-        <p>Nifty Sensex prediction software CALL PUT Prediction .Range cover CALL PUT 20 - 200   . ML Trained Model </p>
+        <p>Nifty Sensex prediction software CALL PUT Prediction .Range cover CALL PUT 20 - 200   . ML Trained Model . Covered Index , Stock Options .  </p>
         <!--
         <h4 class="price-title">Pricing Details</h4>
         <p class="price-sub">1 Month License</p>
@@ -315,6 +315,7 @@
   </script>
 </body>
 </html>
+
 
 
 
