--- a/products.html
+++ b/products.html
@@ -150,12 +150,7 @@
 
       <div class="project-card">
         <h3>Derivative Software - Trial </h3>
-        <p>Nifty Sensex prediction software CALL PUT Prediction .Range cover CALL PUT 20 - 40   . </p>
-        <!--
-        <h4 class="price-title">Pricing Details</h4>
-        <p class="price-sub">1 Month License</p>
-        <p class="price">₹100</p> 
-        -->    
+        <p>Nifty Sensex prediction software CALL PUT Prediction .Range cover CALL PUT 20 - 40   . ML Trained Model . Covered Index , Stock Options .  </p> 
         <a href="https://karthik2342323.github.io/PredictionViewOptionTradingToolsTrialIndexPrivate/" class="demo-btn">View Demo</a>     
         
 
@@ -315,6 +310,7 @@
   </script>
 </body>
 </html>
+
 
 
 
