--- a/services.html
+++ b/services.html
@@ -151,6 +151,13 @@
 
       <div class="project-card">
         <h3>Stock Case </h3>
+        <p> Open Demat Account Buy First Stock  .  </p>
+        <p> No Brokerage for Stocks Buy , Sell  .  </p>
+        <a href="https://kneo.onelink.me/MRGO/4gvm04gu?s=rne_profile" class="demo-btn">Open Account</a>                     
+      </div><br><br>              
+
+      <div class="project-card">
+        <h3>Stock Case </h3>
         <p>Portfolio Based Stock Cases . Regular Investments Cases .  </p>
         <p>  Get Buy Date and Sell Date with profit return .  </p>
         <p> Get Nifty Software Call Put 20 , 200 for 1 year   </p>
@@ -229,6 +236,7 @@
   </script>
 </body>
 </html>
+
 
 
 
